-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
Currently, in lov_init_composite() will quit with error when reading an unknown LOV pattern:
CERROR("%s: unknown composite layout entry type %i\n",
lov2obd(dev->ld_lov)->obd_name,
lsm->lsm_entries[i]->lsme_pattern);
Since FLR will be used for upcoming new features, like PCC-RO, an old client should still be able to read the old format mirrors and ignore the new types of mirrors.
On the MDS, it should skip mirrors with unknown/foreign component types and mark them stale when selecting which component to use for writes.